# 2022-Korea-Rust-Backend

./: README.md
2 - Example/221108 - Rust Basic + Backend Programming, Week 4/: Cargo.toml  README.md
2 - Example/221108 - Rust Basic + Backend Programming, Week 4/src/: lib.rs  main.rs
2 - Example/221108 - Rust Basic + Backend Programming, Week 4/tests/: health_check.rs
2 - Example/221115 - Rust Basic + Backend Programming, Week 5/: Cargo.toml  README.md
2 - Example/221115 - Rust Basic + Backend Programming, Week 5/scripts/: init_db.sh
2 - Example/221115 - Rust Basic + Backend Programming, Week 5/src/: lib.rs  main.rs
2 - Example/221115 - Rust Basic + Backend Programming, Week 5/tests/: health_check.rs
2 - Example/221122 - Rust Basic + Backend Programming, Week 6/: Cargo.toml  README.md  configuration.yaml
2 - Example/221122 - Rust Basic + Backend Programming, Week 6/src/: configuration.rs  main.rs  startup.rs
2 - Example/221122 - Rust Basic + Backend Programming, Week 6/src/routes/: subscriptions.rs
2 - Example/221122 - Rust Basic + Backend Programming, Week 6/tests/: health_check.rs
2 - Example/230128 - Rust Basic + Backend Programming, Week 7/: Cargo.toml  README.md
2 - Example/230128 - Rust Basic + Backend Programming, Week 7/src/: configuration.rs  main.rs
2 - Example/230128 - Rust Basic + Backend Programming, Week 7/src/routes/: subscriptions.rs
2 - Example/230128 - Rust Basic + Backend Programming, Week 7/tests/: health_check.rs
2 - Example/230131 - Rust Basic + Backend Programming, Week 8/: Cargo.toml  README.md  spec.yaml
2 - Example/230131 - Rust Basic + Backend Programming, Week 8/configuration/: production.yaml
2 - Example/230131 - Rust Basic + Backend Programming, Week 8/src/: configuration.rs  main.rs  startup.rs
2 - Example/230207 - Rust Basic + Backend Programming, Week 9/: Cargo.toml  README.md
2 - Example/230207 - Rust Basic + Backend Programming, Week 9/configuration/: base.yaml
2 - Example/230207 - Rust Basic + Backend Programming, Week 9/src/: configuration.rs  main.rs
2 - Example/230207 - Rust Basic + Backend Programming, Week 9/src/routes/: subscriptions.rs
2 - Example/230207 - Rust Basic + Backend Programming, Week 9/tests/: health_check.rs
2 - Example/230214 - Rust Basic + Backend Programming, Week 10/: Cargo.toml  README.md
2 - Example/230214 - Rust Basic + Backend Programming, Week 10/configuration/: base.yaml  production.yaml
2 - Example/230214 - Rust Basic + Backend Programming, Week 10/src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs
2 - Example/230214 - Rust Basic + Backend Programming, Week 10/tests/: health_check.rs
2 - Example/230509 - Rust Basic + Backend Programming, Week 15/: .gitignore  Cargo.toml  README.md  spec.yaml
2 - Example/230509 - Rust Basic + Backend Programming, Week 15/src/: configuration.rs  email_client.rs  main.rs
2 - Example/230509 - Rust Basic + Backend Programming, Week 15/tests/: health_check.rs
2 - Example/230516 - Rust Basic + Backend Programming, Week 16/: README.md
2 - Example/230516 - Rust Basic + Backend Programming, Week 16/src/: configuration.rs  startup.rs
2 - Example/230530 - Rust Basic + Backend Programming, Week 17/: Cargo.toml
2 - Example/230530 - Rust Basic + Backend Programming, Week 17/src/: configuration.rs  email_client.rs  startup.rs
2 - Example/230530 - Rust Basic + Backend Programming, Week 17/src/routes/: subscriptions.rs
2 - Example/230530 - Rust Basic + Backend Programming, Week 17/tests/api/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
2 - Example/230714 - Rust Basic + Backend Programming, Week 18/: Cargo.toml  Dockerfile  README.md
2 - Example/230714 - Rust Basic + Backend Programming, Week 18/src/: telemetry.rs
2 - Example/230717 - Rust Basic + Backend Programming, Week 19/: README.md
2 - Example/230717 - Rust Basic + Backend Programming, Week 19/.cargo/: Config.toml
2 - Example/230724 - Rust Basic + Backend Programming, Week 20/: Cargo.toml  README.md
2 - Example/230724 - Rust Basic + Backend Programming, Week 20/migrations/: 20230724144652_create_users_table.sql
2 - Example/230724 - Rust Basic + Backend Programming, Week 20/scripts/: init_db.sh
2 - Example/230815 - Rust Basic + Backend Programming, Week 21/: Cargo.toml  README.md
2 - Example/230815 - Rust Basic + Backend Programming, Week 21/configuration/: base.yaml
2 - Example/230815 - Rust Basic + Backend Programming, Week 21/migrations/: 20230815062313_rename_password_column.sql
2 - Example/230817 - Rust Basic + Backend Programming, Week 22/: README.md
2 - Example/230821 - Rust Basic + Backend Programming, Week 23/: Cargo.toml  README.md
2 - Example/230828 - Rust Basic + Backend Programming, Week 24/: Cargo.toml  README.md  spec.yaml
2 - Example/230901 - Rust Basic + Backend Programming, Week 25/: Cargo.toml  README.md
2 - Example/230904 - Rust Basic + Backend Programming, Week 26/: README.md  sqlx-data.json
2 - Example/230911 - Rust Basic + Backend Programming, Week 27/: Cargo.toml  README.md
2 - Example/230918 - Rust Basic + Backend Programming, Week 28/: README.md
2 - Example/230924 - Rust Basic + Backend Programming, Week 29/: Cargo.toml  README.md
2 - Example/230924 - Rust Basic + Backend Programming, Week 29/configuration/: base.yaml
2 - Example/230924 - Rust Basic + Backend Programming, Week 29/migrations/: 20230904133510_seed_user.sql  20230918143954_create_idempotency_table.sql  20230924151900_create_newsletter_issues_table.sql  20230924152321_create_issue_delivery_queue_table.sql
2 - Example/230924 - Rust Basic + Backend Programming, Week 29/src/: configuration.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
2 - Example/230924 - Rust Basic + Backend Programming, Week 29/src/idempotency/: key.rs  mod.rs  persistence.rs
2 - Example/230924 - Rust Basic + Backend Programming, Week 29/src/routes/admin/newsletter/: post.rs
2 - Example/230924 - Rust Basic + Backend Programming, Week 29/tests/api/: admin_dashboard.rs  helpers.rs  newsletter.rs
(+83 files in other folders)
