[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive"] }
config = "0.13.2"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = "0.11.12"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
