[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.1.2"
config = "0.13.2"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.10.1"

[dev-dependencies]
reqwest = "0.11.12"
once_cell = "1.17.0"
claims = "0.7.1"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
