[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4.2.1", features = ["cookies", "secure-cookies"] }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.19.1"
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.105"
serde-aux = "4.1.2"
config = "0.13.2"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.10.1"
validator = "0.16.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.43"
anyhow = "1.0.71"
base64 = "0.21.2"
argon2 = { version = "0.5.1", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"

[dependencies.reqwest]
version = "0.11.17"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
once_cell = "1.17.0"
claims = "0.7.1"
fake = "2.5.0"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.5.18"
serde_json = "1.0.96"
linkify = "0.9.0"
serde_urlencoded = "0.7.1"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
